// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders with default props 1`] = `
<div
  className="container"
>
  <h1>
    Todo List
  </h1>
  <div
    className="add-item-to-list"
  >
    <input
      className={undefined}
      name="item"
      onChange={[Function]}
      placeholder="New Item..."
      type="text"
      value=""
    />
    <button
      className="button add"
      onClick={[Function]}
    >
      Add
    </button>
  </div>
  <table>
    <thead>
      <tr>
        <th
          width="66%"
        >
          Item
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          test1
        </td>
        <td>
          <button
            className="button edit"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="button delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          test2
        </td>
        <td>
          <button
            className="button edit"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="button delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          test3
        </td>
        <td>
          <button
            className="button edit"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="button delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`App renders with max props 1`] = `
<div
  className="container"
>
  <div
    className="error"
  >
    some error text
  </div>
  <h1>
    Todo List
  </h1>
  <div
    className="add-item-to-list"
  >
    <input
      className={undefined}
      name="item"
      onChange={[Function]}
      placeholder="New Item..."
      type="text"
      value=""
    />
    <button
      className="button add"
      onClick={[Function]}
    >
      Add
    </button>
  </div>
  <table>
    <thead>
      <tr>
        <th
          width="66%"
        >
          Item
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          test1
        </td>
        <td>
          <button
            className="button edit"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="button delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          test2
        </td>
        <td>
          <button
            className="button edit"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="button delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          test3
        </td>
        <td>
          <button
            className="button edit"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="button delete"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
